Preparation for publishing (#11)
Updated package, pom to satisfy sonatype, and added a readme