@@ -4,15 +4,27 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>kb.octane</groupId>
+    <groupId>com.github.k-boyle</groupId>
     <artifactId>Oktane</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>Core</module>
-        <module>Benchmark</module>
-        <module>Discord4J</module>
+        <module>OktaneCore</module>
+        <module>OktaneBenchmark</module>
+        <module>Oktane4J</module>
     </modules>
+
+    <name>Oktane</name>
+    <description>A high performance Java command framework</description>
+    <url>https://github.com/k-boyle/Oktane</url>
+
+    <licenses>
+        <license>
+            <name>GNU General Public License v3.0</name>
+            <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
     <properties>
         <sonar.projectKey>k-boyle_Oktane</sonar.projectKey>
@@ -31,6 +43,8 @@
         <junit.version>5.7.0</junit.version>
 
         <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+
+        <staging-plugin.version>1.6.7</staging-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -69,8 +83,8 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>kb.octane</groupId>
-                <artifactId>Core</artifactId>
+                <groupId>com.github.k-boyle</groupId>
+                <artifactId>OktaneCore</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
@@ -94,13 +108,86 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
                     <source>15</source>
                     <target>15</target>
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>${staging-plugin.version}</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <release>15</release>
+                    <additionalOptions>--enable-preview</additionalOptions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
+    <scm>
+        <connection>scm:git:github.com:k-boyle/Oktane.git</connection>
+        <developerConnection>scm:git:github.com:k-boyle/Oktane.git</developerConnection>
+        <url>https://github.com/k-boyle/Oktane/tree/master</url>
+    </scm>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 </project>
